name:                chakra
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vikrem/chakra#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >=1.10
extra-source-files:
  README.md
  LICENSE
  vendor/ChakraCoreFiles_1_8_2_Linux/include/ChakraCommon.h
  vendor/ChakraCoreFiles_1_8_2_Linux/include/ChakraCoreVersion.h
  vendor/ChakraCoreFiles_1_8_2_Linux/include/ChakraDebug.h
  vendor/ChakraCoreFiles_1_8_2_Linux/include/ChakraCore.h
  vendor/ChakraCoreFiles_1_8_2_Linux/lib/libChakraCore.so
  vendor/ChakraCoreFiles_1_8_2_OSX/include/ChakraCommon.h
  vendor/ChakraCoreFiles_1_8_2_OSX/include/ChakraCoreVersion.h
  vendor/ChakraCoreFiles_1_8_2_OSX/include/ChakraDebug.h
  vendor/ChakraCoreFiles_1_8_2_OSX/include/ChakraCore.h
  vendor/ChakraCoreFiles_1_8_2_OSX/lib/libChakraCore.dylib

tested-with:
  GHC == 8.2.2

library
  hs-source-dirs:      src
  exposed-modules:     Chakra
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , bytestring
                     , inline-c
                     , mtl
                     , random
                     , safe-exceptions
                     , text
                     , transformers
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  ghc-options: -O2 -Wall
  -- c-sources: vendor/duktape/src/duktape.c c-src/interrupt.c c-src/dukface.c
  cc-options: -O2 -Wno-deprecated-declarations -Wall
  if os(darwin)
    --cabal won't do this. see Setup.hs for overly complicated workaround
    --extra-lib-dirs: ./vendor/ChakraCoreFiles_1_8_2_OSX/lib/
    include-dirs: vendor/ChakraCoreFiles_1_8_2_OSX/include
  if os(linux)
    --cabal won't do this. see Setup.hs for overly complicated workaround
    --extra-lib-dirs: ./vendor/ChakraCoreFiles_1_8_2_Linux/lib/
    include-dirs: vendor/ChakraCoreFiles_1_8_2_Linux/include
  extra-libraries: ChakraCore
  includes: ChakraCommon.h ChakraCoreVersion.h ChakraDebug.h ChakraCore.h
  default-extensions: BangPatterns
                    , ConstraintKinds
                    , DataKinds
                    , DefaultSignatures
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveLift
                    , DeriveTraversable
                    , DerivingStrategies
                    , EmptyCase
                    , ExistentialQuantification
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , InstanceSigs
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , OverloadedStrings
                    , PatternSynonyms
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeFamilyDependencies
                    , TypeOperators
test-suite tests
    default-language: Haskell2010
    ghc-options: -threaded -O2 -Wall -Wno-orphans
    hs-source-dirs: tests
    main-is: Test.hs
    type: exitcode-stdio-1.0
    build-depends:
        base >= 4.3 && < 5
      , aeson
      , async
      , bytestring
      , hashable
      , mtl
      , protolude
      , safe-exceptions
      , scientific
      , smallcheck
      , tasty
      , tasty-hunit
      , tasty-smallcheck
      , text
      , unordered-containers
      , vector
      , chakra

source-repository head
  type:     git
  location: https://github.com/vikrem/chakra
